Refactor ZipHandlerTest